--- a/TrinityCreator/Database/DbConfigWindow.xaml
+++ b/TrinityCreator/Database/DbConfigWindow.xaml
@@ -8,27 +8,29 @@
         Title="Configure Database" Height="300" Width="500" ResizeMode="NoResize">
     <StackPanel>
         <DockPanel Margin="0,0,0,5">
-            <Label Content="MySQL Host" Width="100" HorizontalAlignment="Left"/>
-            <TextBox Name="hostTxt" Text="127.0.0.1"/>
+            <Label Content="MySQL Host" Width="100" HorizontalAlignment="Left" />
+            <TextBox Name="hostTxt" Text="127.0.0.1" />
         </DockPanel>
         <DockPanel Margin="0,0,0,5">
-            <Label Content="User" Width="100" HorizontalAlignment="Left"/>
-            <TextBox Name="userTxt" Text="trinity"/>
+            <Label Content="User" Width="100" HorizontalAlignment="Left" />
+            <TextBox Name="userTxt" Text="trinity" />
         </DockPanel>
         <DockPanel Margin="0,0,0,5">
-            <Label Content="Password" Width="100" HorizontalAlignment="Left"/>
-            <TextBox Name="passwordTxt" Text="trinity"/>
+            <Label Content="Password" Width="100" HorizontalAlignment="Left" />
+            <TextBox Name="passwordTxt" Text="trinity" />
         </DockPanel>
         <DockPanel Margin="0,0,0,5">
-            <Label Content="World Database" Width="100" HorizontalAlignment="Left"/>
-            <TextBox Name="databaseTxt" Text="trinity_world"/>
+            <Label Content="World Database" Width="100" HorizontalAlignment="Left" />
+            <TextBox Name="databaseTxt" Text="trinity_world" />
         </DockPanel>
         <Label Width="500">
             <TextBlock Name="statusLbl" TextWrapping="Wrap" />
         </Label>
         <DockPanel Margin="0,0,0,5">
-            <Button Name="saveBtn" Content="Save connection info" Width="150" HorizontalAlignment="Left" Click="saveBtn_Click" IsDefault="True"/>
-            <Button Name="closeBtn" Content="Close window" Width="90" HorizontalAlignment="Right" Click="closeBtn_Click"/>
+            <Button Name="saveBtn" Content="Save connection info" Width="150" HorizontalAlignment="Left"
+                    Click="saveBtn_Click" IsDefault="True" />
+            <Button Name="closeBtn" Content="Close window" Width="90" HorizontalAlignment="Right"
+                    Click="closeBtn_Click" />
         </DockPanel>
     </StackPanel>
 </Window>
