--- a/TrinityCreator/DynamicDataControl.xaml
+++ b/TrinityCreator/DynamicDataControl.xaml
@@ -1,17 +1,19 @@
 ﻿<UserControl x:Class="TrinityCreator.DynamicDataControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:TrinityCreator"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel>
         <DockPanel Name="headerDp" />
         <StackPanel x:Name="dynamicSp" />
         <DockPanel>
-            <Button x:Name="addLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0" Content="Add" Click="addLineBtn_Click"/>
-            <Button x:Name="removeLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0" Content="Remove" Click="removeLineBtn_Click"/>
+            <Button x:Name="addLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
+                    Content="Add" Click="addLineBtn_Click" />
+            <Button x:Name="removeLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
+                    Content="Remove" Click="removeLineBtn_Click" />
         </DockPanel>
     </StackPanel>
 </UserControl>
