--- a/TrinityCreator/ItemPreview.xaml
+++ b/TrinityCreator/ItemPreview.xaml
@@ -1,26 +1,29 @@
 ﻿<UserControl x:Class="TrinityCreator.ItemPreview"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:l="clr-namespace:TrinityCreator"
              mc:Ignorable="d">
     <UserControl.Resources>
-        <l:ValueToVisibilityConverter x:Key="valueVisibilityConverter"/>
-        <l:WeaponSpeedToStringConverter x:Key="weaponSpeedToStringConverter"/>
+        <l:ValueToVisibilityConverter x:Key="valueVisibilityConverter" />
+        <l:WeaponSpeedToStringConverter x:Key="weaponSpeedToStringConverter" />
     </UserControl.Resources>
 
     <StackPanel>
         <Grid>
-            <Border BorderBrush="#fff" BorderThickness="2" CornerRadius="8,8,8,8" Margin="2" Background="#0b0b17"/>
+            <Border BorderBrush="#fff" BorderThickness="2" CornerRadius="8,8,8,8" Margin="2" Background="#0b0b17" />
             <StackPanel Margin="10,5">
                 <Label Name="itemNameLbl" Content="{Binding Name}" Foreground="Gray" FontSize="18" />
-                <Label Name="itemBoundsLbl" Content="{Binding Binds.Description}" Foreground="White" FontSize="14" Visibility="{Binding Binds.Id, Converter={StaticResource valueVisibilityConverter}}"/>
+                <Label Name="itemBoundsLbl" Content="{Binding Binds.Description}" Foreground="White" FontSize="14"
+                       Visibility="{Binding Binds.Id, Converter={StaticResource valueVisibilityConverter}}" />
                 <DockPanel>
-                    <TextBlock Name="subclassLeftNoteLbl" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,5"/>
-                    <TextBlock Name="subclassRightNoteLbl" Foreground="White" FontSize="14" HorizontalAlignment="Right" Margin="0,0,5,5"/>
+                    <TextBlock Name="subclassLeftNoteLbl" Foreground="White" FontSize="14" HorizontalAlignment="Left"
+                               Margin="5,0,0,5" />
+                    <TextBlock Name="subclassRightNoteLbl" Foreground="White" FontSize="14" HorizontalAlignment="Right"
+                               Margin="0,0,5,5" />
                 </DockPanel>
-            
+
                 <!-- Only visible on weapon item -->
                 <StackPanel Visibility="{Binding DamageInfo.Dps, Converter={StaticResource valueVisibilityConverter}}">
                     <DockPanel>
@@ -28,23 +31,29 @@
                             <TextBlock Text="{Binding DamageInfo.MinDamage}" />
                             <TextBlock Text="-" />
                             <TextBlock Text="{Binding DamageInfo.MaxDamage}" />
-                            <TextBlock Text="{Binding DamageInfo.Type}" Visibility="{Binding DamageInfo.Type.Id, Converter={StaticResource valueVisibilityConverter}}"/>
+                            <TextBlock Text="{Binding DamageInfo.Type}"
+                                       Visibility="{Binding DamageInfo.Type.Id, Converter={StaticResource valueVisibilityConverter}}" />
                             <TextBlock Text="Damage" />
                         </TextBlock>
-                        <Label Name="weaponSpeedLbl" Content="{Binding DamageInfo.Speed, Converter={StaticResource weaponSpeedToStringConverter}}" Foreground="White" FontSize="14" HorizontalAlignment="Right"/>
+                        <Label Name="weaponSpeedLbl"
+                               Content="{Binding DamageInfo.Speed, Converter={StaticResource weaponSpeedToStringConverter}}"
+                               Foreground="White" FontSize="14" HorizontalAlignment="Right" />
                     </DockPanel>
-                    <Label Name="weaponDpsLbl" Content="{Binding DamageInfo.DpsInfo}" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
+                    <Label Name="weaponDpsLbl" Content="{Binding DamageInfo.DpsInfo}" Foreground="White" FontSize="14"
+                           HorizontalAlignment="Left" Margin="0,-10,0,0" />
                 </StackPanel>
                 <!-- Only visible on armor item -->
                 <StackPanel>
 
-                    <TextBlock Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0" Visibility="{Binding Armor, Converter={StaticResource valueVisibilityConverter}}">
+                    <TextBlock Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0"
+                               Visibility="{Binding Armor, Converter={StaticResource valueVisibilityConverter}}">
                         <TextBlock Name="itemArmorLbl" Text="{Binding Armor}" />
-                        <TextBlock Text="Armor"/>
+                        <TextBlock Text="Armor" />
                     </TextBlock>
-                    <TextBlock Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0" Visibility="{Binding Block, Converter={StaticResource valueVisibilityConverter}}">
+                    <TextBlock Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0"
+                               Visibility="{Binding Block, Converter={StaticResource valueVisibilityConverter}}">
                         <TextBlock Name="itemBlockLbl" Text="{Binding Block}" />
-                        <TextBlock Text="Block"/>
+                        <TextBlock Text="Block" />
                     </TextBlock>
                 </StackPanel>
                 <StackPanel Name="statsSp" />
@@ -53,63 +62,82 @@
                 <!-- Only visible when sockets available -->
                 <!-- todo: Ensure you can for example have two yellow sockets -->
                 <StackPanel Name="gemsPanel" />
-                <TextBlock Foreground="#0c0" Margin="5,0,0,5" Visibility="{Binding SocketBonus.Id, Converter={StaticResource valueVisibilityConverter}}">
-                    <TextBlock Text="Socket Bonus:" /> 
-                    <TextBlock Text="{Binding SocketBonus}" /> 
+                <TextBlock Foreground="#0c0" Margin="5,0,0,5"
+                           Visibility="{Binding SocketBonus.Id, Converter={StaticResource valueVisibilityConverter}}">
+                    <TextBlock Text="Socket Bonus:" />
+                    <TextBlock Text="{Binding SocketBonus}" />
                 </TextBlock>
 
-                <TextBlock Visibility="{Binding ElementName=allowedClassesLb, Path=Text, Converter={StaticResource valueVisibilityConverter}}" Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,5">
-                    <TextBlock Text="Classes:"/>
+                <TextBlock
+                    Visibility="{Binding ElementName=allowedClassesLb, Path=Text, Converter={StaticResource valueVisibilityConverter}}"
+                    Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,5">
+                    <TextBlock Text="Classes:" />
                     <TextBlock Name="allowedClassesLb" />
                 </TextBlock>
-                <TextBlock Visibility="{Binding ElementName=allowedRacesLb, Path=Text, Converter={StaticResource valueVisibilityConverter}}" Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,5">
-                    <TextBlock Text="Races:"/>
+                <TextBlock
+                    Visibility="{Binding ElementName=allowedRacesLb, Path=Text, Converter={StaticResource valueVisibilityConverter}}"
+                    Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,5">
+                    <TextBlock Text="Races:" />
                     <TextBlock Name="allowedRacesLb" />
                 </TextBlock>
-                
-                <TextBlock Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="5,-10,0,0" Visibility="{Binding MinLevel, Converter={StaticResource valueVisibilityConverter}}">
+
+                <TextBlock Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="5,-10,0,0"
+                           Visibility="{Binding MinLevel, Converter={StaticResource valueVisibilityConverter}}">
                     <TextBlock Text="Requires Level" />
                     <TextBlock Name="itemLevelRequiredLbl" Text="{Binding MinLevel}" />
                 </TextBlock>
 
                 <!-- Only visible when repairable -->
-                <TextBlock Name="itemDurabilityLbl" Visibility="{Binding Durability, Converter={StaticResource valueVisibilityConverter}}" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0">
-                        <TextBlock Text="(" />
-                        <TextBlock Text="{Binding Durability}" />
-                        <TextBlock Text="/" />
-                        <TextBlock Text="{Binding Durability}" />
-                        <TextBlock Text=")" />
-                    </TextBlock>
-                <Label Name="itemQuoteLbl" Content="{Binding Quote}" ContentStringFormat="''{0}''" Foreground="#ffd200" FontSize="14"/>
+                <TextBlock Name="itemDurabilityLbl"
+                           Visibility="{Binding Durability, Converter={StaticResource valueVisibilityConverter}}"
+                           Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="5,0,0,0">
+                    <TextBlock Text="(" />
+                    <TextBlock Text="{Binding Durability}" />
+                    <TextBlock Text="/" />
+                    <TextBlock Text="{Binding Durability}" />
+                    <TextBlock Text=")" />
+                </TextBlock>
+                <Label Name="itemQuoteLbl" Content="{Binding Quote}" ContentStringFormat="''{0}''" Foreground="#ffd200"
+                       FontSize="14" />
 
                 <!-- Buy price -->
-                <DockPanel Name="buyDockPanel" Visibility="{Binding ValueBuy.Amount, Converter={StaticResource valueVisibilityConverter}}">
-                    <Label Content="Buy Price:" Foreground="White" Width="100"/>
-                    <Label Content="{Binding ValueBuy.Gold}" Name="buyGoldLbl" Foreground="White" HorizontalAlignment="Left" />
+                <DockPanel Name="buyDockPanel"
+                           Visibility="{Binding ValueBuy.Amount, Converter={StaticResource valueVisibilityConverter}}">
+                    <Label Content="Buy Price:" Foreground="White" Width="100" />
+                    <Label Content="{Binding ValueBuy.Gold}" Name="buyGoldLbl" Foreground="White"
+                           HorizontalAlignment="Left" />
                     <Image Source="Resources/gold.gif" Width="15" Height="15" HorizontalAlignment="Left" />
-                    <Label Content="{Binding ValueBuy.Silver}" Name="buySilverLbl" Foreground="White" HorizontalAlignment="Left" />
+                    <Label Content="{Binding ValueBuy.Silver}" Name="buySilverLbl" Foreground="White"
+                           HorizontalAlignment="Left" />
                     <Image Source="Resources/silver.gif" Width="15" Height="15" HorizontalAlignment="Left" />
-                    <Label Content="{Binding ValueBuy.Copper}" Name="buyCopperLbl" Foreground="White" HorizontalAlignment="Left" />
+                    <Label Content="{Binding ValueBuy.Copper}" Name="buyCopperLbl" Foreground="White"
+                           HorizontalAlignment="Left" />
                     <Image Source="Resources/copper.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                 </DockPanel>
-            
+
                 <!-- Sell price -->
-                <DockPanel Margin="0,-10,0,0" Name="sellDockPanel" Visibility="{Binding ValueSell.Amount, Converter={StaticResource valueVisibilityConverter}}">
-                    <Label Content="Sell Price:" Foreground="White" Width="100"/>
-                    <Label Content="{Binding ValueSell.Gold}" Name="sellGoldLbl" Foreground="White" HorizontalAlignment="Left" />
+                <DockPanel Margin="0,-10,0,0" Name="sellDockPanel"
+                           Visibility="{Binding ValueSell.Amount, Converter={StaticResource valueVisibilityConverter}}">
+                    <Label Content="Sell Price:" Foreground="White" Width="100" />
+                    <Label Content="{Binding ValueSell.Gold}" Name="sellGoldLbl" Foreground="White"
+                           HorizontalAlignment="Left" />
                     <Image Source="Resources/gold.gif" Width="15" Height="15" HorizontalAlignment="Left" />
-                    <Label Content="{Binding ValueSell.Silver}" Name="sellSilverLbl" Foreground="White" HorizontalAlignment="Left" />
+                    <Label Content="{Binding ValueSell.Silver}" Name="sellSilverLbl" Foreground="White"
+                           HorizontalAlignment="Left" />
                     <Image Source="Resources/silver.gif" Width="15" Height="15" HorizontalAlignment="Left" />
-                    <Label Content="{Binding ValueSell.Copper}" Name="sellCopperLbl" Foreground="White" HorizontalAlignment="Left" />
+                    <Label Content="{Binding ValueSell.Copper}" Name="sellCopperLbl" Foreground="White"
+                           HorizontalAlignment="Left" />
                     <Image Source="Resources/copper.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                 </DockPanel>
 
             </StackPanel>
         </Grid>
         <StackPanel>
-            <Button x:Name="screenshotClipboardBtn" Content="Save screenshot to clipboard" Margin="0,5,0,0" Click="screenshotClipboardBtn_Click"></Button>
-            <Button x:Name="screenshotDiskBtn" Content="Save screenshot to disk" Margin="0,5,0,0" Click="screenshotDiskBtn_Click"></Button>
+            <Button x:Name="screenshotClipboardBtn" Content="Save screenshot to clipboard" Margin="0,5,0,0"
+                    Click="screenshotClipboardBtn_Click" />
+            <Button x:Name="screenshotDiskBtn" Content="Save screenshot to disk" Margin="0,5,0,0"
+                    Click="screenshotDiskBtn_Click" />
         </StackPanel>
     </StackPanel>
-    
+
 </UserControl>
