--- a/TrinityCreatorSetup/Product.wxs
+++ b/TrinityCreatorSetup/Product.wxs
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
+
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Product Id="*"
-    Name="Trinity Creator"
-    Language="1033" Version="1.0.1.7"
-    Manufacturer="RStijn"
-    UpgradeCode="7F3D3555-6622-43BB-A57B-3ADD4D2AFB0F">
+           Name="Trinity Creator"
+           Language="1033" Version="1.0.1.7"
+           Manufacturer="RStijn"
+           UpgradeCode="7F3D3555-6622-43BB-A57B-3ADD4D2AFB0F">
 
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine" />
 
@@ -14,11 +15,11 @@
 
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFilesFolder">
-        <Directory Id="APPLICATIONROOTDIRECTORY" Name="Trinity Creator"/>
+        <Directory Id="APPLICATIONROOTDIRECTORY" Name="Trinity Creator" />
       </Directory>
       <!-- Step 1: Define the directory structure -->
       <Directory Id="ProgramMenuFolder">
-        <Directory Id="ApplicationProgramsFolder" Name="Trinity Creator"/>
+        <Directory Id="ApplicationProgramsFolder" Name="Trinity Creator" />
       </Directory>
     </Directory>
 
@@ -35,12 +36,14 @@
     <DirectoryRef Id="ApplicationProgramsFolder">
       <Component Id="ApplicationShortcut">
         <Shortcut Id="ApplicationStartMenuShortcut"
-             Name="Trinity Creator"
-            Target="[#TrinityCreator.exe]"
-              WorkingDirectory="APPLICATIONROOTDIRECTORY"/>
-        <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall"/>
-        <RegistryValue Root="HKCU" Key="Software\RStijn\TrinityCreator" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
-        <RegistryValue Root="HKCU" Key="Software\RStijn\TrinityCreator" Name="installDirectory" Type="string" Value="[APPLICATIONROOTDIRECTORY]" />
+                  Name="Trinity Creator"
+                  Target="[#TrinityCreator.exe]"
+                  WorkingDirectory="APPLICATIONROOTDIRECTORY" />
+        <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall" />
+        <RegistryValue Root="HKCU" Key="Software\RStijn\TrinityCreator" Name="installed" Type="integer" Value="1"
+                       KeyPath="yes" />
+        <RegistryValue Root="HKCU" Key="Software\RStijn\TrinityCreator" Name="installDirectory" Type="string"
+                       Value="[APPLICATIONROOTDIRECTORY]" />
       </Component>
     </DirectoryRef>
 
@@ -55,18 +58,20 @@
     <UI>
       <UIRef Id="WixUI_Minimal" />
       <Publish Dialog="ExitDialog"
-          Control="Finish"
-          Event="DoAction"
-          Value="LaunchApplication">WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1 and NOT Installed</Publish>
-      <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1"/>
+               Control="Finish"
+               Event="DoAction"
+               Value="LaunchApplication">
+        WIXUI_EXITDIALOGOPTIONALCHECKBOX = 1 and NOT Installed
+      </Publish>
+      <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOX" Value="1" />
     </UI>
     <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Start Trinity Creator" />
 
     <!-- Step 3: Include the custom action -->
     <Property Id="WixShellExecTarget" Value="[#TrinityCreator.exe]" />
     <CustomAction Id="LaunchApplication"
-        BinaryKey="WixCA"
-        DllEntry="WixShellExec"
-        Impersonate="yes" />
+                  BinaryKey="WixCA"
+                  DllEntry="WixShellExec"
+                  Impersonate="yes" />
   </Product>
 </Wix>
