TrinityQuest & QuestPage added
& updated xaml names

--- a/TrinityCreator/DynamicDataControl.xaml
+++ b/TrinityCreator/DynamicDataControl.xaml
@@ -7,12 +7,12 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel>
-        <DockPanel Name="headerDp" />
-        <StackPanel x:Name="dynamicSp" />
+        <DockPanel Name="HeaderDp" />
+        <StackPanel x:Name="DynamicSp" />
         <DockPanel>
-            <Button x:Name="addLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
+            <Button x:Name="AddLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
                     Content="Add" Click="addLineBtn_Click" />
-            <Button x:Name="removeLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
+            <Button x:Name="RemoveLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
                     Content="Remove" Click="removeLineBtn_Click" />
         </DockPanel>
     </StackPanel>
