--- a/TrinityCreator/Database/DbConfigWindow.xaml
+++ b/TrinityCreator/Database/DbConfigWindow.xaml
@@ -9,27 +9,27 @@
     <StackPanel>
         <DockPanel Margin="0,0,0,5">
             <Label Content="MySQL Host" Width="100" HorizontalAlignment="Left" />
-            <TextBox Name="hostTxt" Text="127.0.0.1" />
+            <TextBox Name="HostTxt" Text="127.0.0.1" />
         </DockPanel>
         <DockPanel Margin="0,0,0,5">
             <Label Content="User" Width="100" HorizontalAlignment="Left" />
-            <TextBox Name="userTxt" Text="trinity" />
+            <TextBox Name="UserTxt" Text="trinity" />
         </DockPanel>
         <DockPanel Margin="0,0,0,5">
             <Label Content="Password" Width="100" HorizontalAlignment="Left" />
-            <TextBox Name="passwordTxt" Text="trinity" />
+            <TextBox Name="PasswordTxt" Text="trinity" />
         </DockPanel>
         <DockPanel Margin="0,0,0,5">
             <Label Content="World Database" Width="100" HorizontalAlignment="Left" />
-            <TextBox Name="databaseTxt" Text="trinity_world" />
+            <TextBox Name="DatabaseTxt" Text="trinity_world" />
         </DockPanel>
         <Label Width="500">
-            <TextBlock Name="statusLbl" TextWrapping="Wrap" />
+            <TextBlock Name="StatusLbl" TextWrapping="Wrap" />
         </Label>
         <DockPanel Margin="0,0,0,5">
-            <Button Name="saveBtn" Content="Save connection info" Width="150" HorizontalAlignment="Left"
+            <Button Name="SaveBtn" Content="Save connection info" Width="150" HorizontalAlignment="Left"
                     Click="saveBtn_Click" IsDefault="True" />
-            <Button Name="closeBtn" Content="Close window" Width="90" HorizontalAlignment="Right"
+            <Button Name="CloseBtn" Content="Close window" Width="90" HorizontalAlignment="Right"
                     Click="closeBtn_Click" />
         </DockPanel>
     </StackPanel>
