--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -26,7 +26,7 @@
                 <Frame Name="ItemTab"/>
             </TabItem>
             <TabItem Header="Quest (UNFINISHED)"  Tag="unfinished">
-                <Frame Name="QuestTab"></Frame>
+                <Frame Name="QuestTab" />
             </TabItem>
             <TabItem Header="Creature (UNFINISHED)" Name="CreatureTab" Tag="unfinished" />
             <TabItem Header="More coming soon!">
