--- a/TrinityCreator/QuestPage.xaml
+++ b/TrinityCreator/QuestPage.xaml
@@ -5,14 +5,15 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TrinityCreator"
       mc:Ignorable="d"
-      Title="QuestPage" Height="749.589" Width="555.096">
+      Title="QuestPage">
     <StackPanel>
-        <StackPanel Width="350" Height="440" HorizontalAlignment="Left">
-            <StackPanel.Background>
-                <ImageBrush ImageSource="Resources/QuestGreeting.png" />
-            </StackPanel.Background>
-            <TextBlock Text="Quest Title"/>
-        </StackPanel>
-        
+        <Viewbox VerticalAlignment="Top">
+            <DockPanel>
+                <local:QuestPreview QuestStatusIcon="DailyQuestIcon" />
+                <local:QuestPreview></local:QuestPreview>
+                <local:QuestPreview></local:QuestPreview>
+                <local:QuestPreview></local:QuestPreview>
+            </DockPanel>
+        </Viewbox>
     </StackPanel>
 </Page>
