--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="TrinityCreator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Trinity Creator" Height="800" Width="750" MinWidth="675" Icon="Resources/tclogo.png"
+        Title="Trinity Creator" Height="800" Width="1050" MinWidth="800" Icon="Resources/tclogo.png"
+        xmlns:local="clr-namespace:TrinityCreator"
         Closing="Window_Closing">
 
     <DockPanel>
@@ -21,22 +22,46 @@
                 <MenuItem Header="Donate" Click="Donate_Click" Foreground="Black" />
             </MenuItem>
         </Menu>
-        <TabControl x:Name="TabControl">
-            <TabItem Header="Item" >
-                <Frame Name="ItemTab"/>
-            </TabItem>
-            <TabItem Header="Quest (UNFINISHED)"  Tag="unfinished">
-                <Frame Name="QuestTab" />
-            </TabItem>
-            <TabItem Header="Creature (UNFINISHED)" Name="CreatureTab" Tag="unfinished" />
-            <TabItem Header="More coming soon!">
-                <Grid Margin="0,0,0,0">
-                    <TextBlock TextWrapping="Wrap"
-                               Text="I'm working on this application almost daily so check back for updates regularly! You will be asked to update when starting Trinity Creator if an update is available."
-                               FontSize="18" VerticalAlignment="Top" />
-                    <WebBrowser Name="UpdatesBrowser" Margin="0,50,0,0" />
-                </Grid>
-            </TabItem>
-        </TabControl>
+
+        <Grid Name="ContentGrid" DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="700*"/>
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition MinWidth="25" MaxWidth="750"/>
+            </Grid.ColumnDefinitions>
+            <TabControl Name="TabControl" HorizontalAlignment="Stretch" Grid.Column="0" Grid.Row="0">
+                <TabItem Header="Item" >
+                    <Frame Name="ItemTab"/>
+                </TabItem>
+                <TabItem Header="Quest (UNFINISHED)" Tag="unfinished">
+                    <Frame Name="QuestTab" />
+                </TabItem>
+                <TabItem Header="Creature (UNFINISHED)" Name="CreatureTab" Tag="unfinished" />
+                <TabItem Header="More coming soon!">
+                    <Grid Margin="0,0,0,0">
+                        <TextBlock TextWrapping="Wrap"
+                                   Text="I'm working on this application almost daily so check back for updates regularly! You will be asked to update when starting Trinity Creator if an update is available."
+                                   FontSize="18" VerticalAlignment="Top" />
+                        <WebBrowser Name="UpdatesBrowser" Margin="0,50,0,0" />
+                    </Grid>
+                </TabItem>
+            </TabControl>
+
+            <GridSplitter Name="ContentGridSplitter" ResizeDirection="Columns" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Foreground="Red"/>
+
+            <Expander Name="LookupToolExpander" ExpandDirection="Left" HorizontalAlignment="Stretch" Grid.Column="2" Grid.Row="0" Expanded="LookupToolExpander_Expanded" Collapsed="LookupToolExpander_Collapsed">
+                <Expander.Header>
+                    <TextBlock Text="Lookup Tool">
+                        <TextBlock.LayoutTransform>
+                            <RotateTransform Angle="-90" />
+                        </TextBlock.LayoutTransform>
+                    </TextBlock>
+                </Expander.Header>
+                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                    <local:LookupTool x:Name="LookupTool"/>
+                </ScrollViewer>
+            </Expander>
+        </Grid>
+
     </DockPanel>
 </Window>
