--- a/TrinityCreator/ItemPage.xaml
+++ b/TrinityCreator/ItemPage.xaml
@@ -18,7 +18,7 @@
     </UserControl.Resources>
 
     <Grid Background="#fff">
-        <ScrollViewer Margin="0,0,380,0">
+        <ScrollViewer Margin="0,0,380,0" VerticalScrollBarVisibility="Auto">
             <StackPanel>
                 <GroupBox Header="Item Details" Height="325">
                     <Grid>
