--- a/TrinityCreator/QuestPreview.xaml
+++ b/TrinityCreator/QuestPreview.xaml
@@ -10,7 +10,12 @@
         <Grid.Background>
             <ImageBrush ImageSource="Resources/QuestGreeting.png" />
         </Grid.Background>
-        <Image Source="{Binding QuestStatusIcon}"/>
-        <TextBlock Text="Quest Title"/>
+        <ScrollViewer Margin="20,77,8,29">
+            <StackPanel Margin="5">
+                <TextBox Text="{Binding LogTitle}"  FontFamily="./Resources/#Morpheus" FontSize="21.333" Background="Transparent"/>
+                <TextBox Text="ml"  FontFamily="./Resources/#Friz Quadrata TT" FontSize="13.333" Background="Transparent" TextWrapping="Wrap" AcceptsReturn="True" />
+
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </UserControl>
